added modalities querying to datasets
